# rules_d

./: .bazelrc  .pre-commit-config.yaml  MODULE.bazel  README.md  renovate.json
.github/workflows/: buildifier.yaml  ci.yaml  conventional-commits.yaml  publish.yaml  release.yaml  tag.yaml
d/: repositories.bzl
d/private/rules/: compile.bzl
docs/: dub.md
e2e/smoke/: .bazelrc  MODULE.bazel  WORKSPACE.bazel
